# cmake-thirdparty

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindBlosc.cmake  FindGoogleTest.cmake
